# 3D-Game-Engine

./: .gitignore  3D Game Engine.cpp  3D Game Engine.h  CMakeLists.txt  CMakePresets.json  README.md  code-format.clang-format  vcpkg.json
Sandbox/: CMakeLists.txt  Sandbox.cpp
cmake/: Vcpkg.cmake
engine/: CMakeLists.txt
engine/Include/Core/: Application.h  Input.h  Window.h
engine/Include/Memory/: MemoryManager.h
engine/Include/Utils/: Logger.h  Profiling.h
engine/src/Core/: Application.cpp  Input.cpp  Window.cpp
engine/src/Memory/: MemoryManager.cpp
engine/src/Utils/: Logger.cpp  Profiling.cpp
include/engine/: MemoryAllocator.h
scripts/: build.bat  build.sh  ci_pipeline.yml
src/engine/: MemoryAllocator.cpp
src/game/: Game.cpp
tests/: CMakeLists.txt  TestExample.cpp  test_Application.cpp  test_Input.cpp  test_Logger.cpp  test_Memory.cpp  test_Window.cpp  test_main.cpp
tests/engine/: TestingMemoryAllocator.cpp
